--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
 
-    <meta name="description" content="Portfolio Website">
-    <meta name="keywords" content="Reactjs, React JS, HTML, SCSS, CSS, JavaScript, UI, UX, Portfolio">
-    <meta name="author" content="Sukhvant Singh">
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Sukhvant Singh</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+  <meta name="description" content="Portfolio Website">
+  <meta name="keywords" content="Reactjs, React JS, HTML, SCSS, CSS, JavaScript, UI, UX, Portfolio">
+  <meta name="author" content="Sukhvant Singh">
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKKLER1HCC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-RKKLER1HCC');
+  </script>
+  <title>Sukhvant Singh</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
